# pipelang

./: LICENSE  README.md  pyproject.toml
src/: chains.py  filters.py  llms.py  pipeline.py  prompt.py  prompts.py  splitters.py
src/prompts/: summarize_langchain.txt
src/prompts/map_reduce_qa/: map_langchain.txt  reduce_langchain.txt
src/prompts/refine/: refine_langchain.txt
src/utils/: joiners.py  splitters.py  token_counters.py
tests/: test_chains.py  test_splitters.py
